p2/infra/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-1-service
spec:
  selector:
    app: app-1
  ports:
    - protocol: TCP
      port: 42
      targetPort: 42
---

apiVersion: v1
kind: Service
metadata:
  name: app-2-service
spec:
  selector:
    app: app-2
  ports:
    - protocol: TCP
      port: 1337
      targetPort: 1337

---

apiVersion: v1
kind: Service
metadata:
  name: app-3-service
spec:
  selector:
    app: app-3
  ports:
    - protocol: TCP
      port: 24
      targetPort: 24
